@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.5
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed error when resetting rail types
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.4
 Date: 2020-08-28
